[package]
name = "homesync"
version = "0.1.0"
authors = ["henenq <henrik.enquist@maxiv.lu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.5"
walkdir = "^2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rprompt = "1.0"