[package]
name = "twowaysync"
version = "0.1.3"
authors = ["henenq <henrik.enquist@maxiv.lu.se>"]
edition = "2018"
description = "Twowaysync is a utility for keeping two folders in sync, by tracking and copying changes."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.7"
walkdir = "^2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1"
chrono = "0.4.9"
clap = "2.33.0"
globset = "0.4"

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
twowaysync = { path = "/usr/bin/twowaysync" }
